force-app/main/default/objects/Expense_Line_Item__c/fields/Bill_Link__c.field-meta.xml
<CustomField>
    <fullName>Bill_Link__c</fullName>
    <label>Bill Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>