force-app/main/default/objects/Expense_Line_Item__c/fields/ContentDocId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocId__c</fullName>
    <label>ContentDocId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>