force-app/main/default/objects/Expense_Line_Item__c/fields/Distance_Travelled__c.field-meta.xml
<CustomField>
    <fullName>Distance_Travelled__c</fullName>
    <label>Distance Travelled(KM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>