force-app/main/default/objects/Expense_Line_Item__c/fields/Not_From_Travel_System__c.field-meta.xml
<CustomField>
    <fullName>Not_From_Travel_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not From Travel System</label>
    <type>Checkbox</type>
</CustomField>