force-app/main/default/objects/Expense_Line_Item__c/fields/Parent_ID_Config__c.field-meta.xml
<CustomField>
    <fullName>Parent_ID_Config__c</fullName>
    <description>This Field is used in API Configuration</description>
    <formula>CASESAFEID(Expense__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent ID Config</label>
    <type>Text</type>
</CustomField>