force-app/main/default/objects/Expense_Line_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Travel Expense</fullName>
            </value>
            <value>
                <fullName>Food Expense</fullName>
            </value>
            <value>
                <fullName>Accommodation Expense</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Expense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>